# openai_augmented_proxy

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/: copilot-instructions.md
examples/configuration/: README.md  variables.yaml
examples/configuration/mcp/: servers.yaml
examples/configuration/models/: assistant.yaml  home-control.yaml  researcher.yaml  time-aware-assistant.yaml
examples/configuration/skills/: code-review.md  writing-style.md
examples/configuration/templates/: README.md  base-assistant.j2
examples/configuration/templates/common/: tool-instructions.j2
examples/configuration/templates/context/: time.j2
src/openai_proxy/: __init__.py  __main__.py  app.py  chat_logger.py  client.py  config.py  experts.py  handlers.py  mcp_client.py  models.py  proxy.py  schemas.py  skills.py  template_processor.py  variable_store.py
tests/: __init__.py  conftest.py  test_app.py  test_chat_logger.py  test_client.py  test_config.py  test_experts.py  test_handlers.py  test_models.py  test_proxy.py  test_schemas.py  test_skills.py  test_template_processor.py  test_variable_store.py
